--- a/scss/core/_globals.scss
+++ b/scss/core/_globals.scss
@@ -354,4 +354,302 @@
   .tooltip-scaling-elem {
     display: inline-block;
   }
+
+  .pc-summary {
+    flex-basis: 50%;
+    overflow: visible;
+    padding: 5px;
+    max-width: 50%;
+    position: relative;
+    z-index: 4;
+
+    &:hover { z-index: 5 }
+    pointer-events: auto;
+    // overflow: hidden;
+
+    display: grid;
+    grid-template-areas:
+      "header header header"
+      "actions assets harm";
+    grid-template-rows: 20px 1fr;
+    grid-template-columns: 1fr 33% 33%;
+
+    .pc-summary-img {
+      position: absolute;
+      top: 20px;
+      width: 33%;
+      // left: 50%;
+      pointer-events: none;
+      z-index: -1;
+      opacity: 0.5;
+      // filter: blur(2px);
+      // transform: -50% -50%;
+    }
+
+    section.pc-summary-header {
+      grid-area: header;
+      display: grid;
+      grid-template-areas: "name name heritage background-img vice-img playbook-img";
+      grid-template-rows: 20px;
+      grid-template-columns: 1fr 1fr 40px 20px 20px 20px;
+      position: relative;
+      width: 100%;
+      // background: rgba(255, 255, 255, 0.25);
+      grid-gap: 5px;
+
+
+      height: min-content;
+      // min-height: 300px;
+
+      > img {
+        filter:  drop-shadow(1px 1px 0px var(--blades-black-dark));
+        &.pc-summary-background-img {
+          grid-area: background-img;
+        }
+        &.pc-summary-vice-img {
+          grid-area: vice-img;
+        }
+        &.pc-summary-playbook-img {
+          grid-area: playbook-img;
+        }
+      }
+
+      .pc-summary-name {
+        grid-area: name;
+        font-family: var(--font-emphasis);
+        font-size: toRem(20px);
+        line-height: toRem(20px);
+        color: var(--blades-white-bright);
+        font-variant: small-caps;
+      }
+      .pc-summary-heritage {
+        grid-area: heritage;
+        font-size: 10px;
+        font-family: Oswald;
+        text-transform: uppercase;
+        line-height: 20px;
+        text-align: right;
+        color: var(--blades-white-bright);
+        padding-right: 5px;
+      }
+    }
+
+    section.pc-summary-actions {
+      grid-area: actions;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      align-content: flex-start;
+
+      .pc-summary-attribute {
+        text-align: center;
+        flex-basis: 100%;
+        flex-grow: 1;
+        flex-shrink: 0;
+        line-height: toRem(14px);
+        height: toRem(14px);
+        &:not(:first-child) {
+          margin-top: 5px;
+        }
+        label {
+          font-family: Oswald;
+          font-size: toRem(12px);
+          line-height: toRem(12px);
+          color: var(--blades-white);
+        }
+        span {
+          font-family: Oswald;
+          font-size: toRem(12px);
+          line-height: toRem(12px);
+          color: var(--blades-white-bright);
+        }
+      }
+
+      .pc-summary-action {
+        flex-basis: 50%;
+        flex-grow: 0;
+        flex-shrink: 0;
+        line-height: toRem(12px);
+        height: toRem(12px);
+        display: flex;
+        flex-direction: row;
+        label {
+          font-family: Oswald;
+          font-size: toRem(10px);
+          line-height: toRem(10px);
+          color: var(--blades-grey-bright);
+          flex-grow: 1;
+          text-align: right;
+        }
+        span {
+          font-family: Oswald;
+          font-size: toRem(10px);
+          line-height: toRem(10px);
+          color: var(--blades-white-bright);
+          width: 20px;
+          text-align: center;
+        }
+      }
+
+
+    }
+
+    section.pc-summary-assets {
+      grid-area: assets;
+      padding-right: 3px;
+      position: relative;
+      z-index: 5;
+
+      &:hover { z-index: 10 }
+
+      .pc-summary-assets-container {
+        &:not(:first-child) {
+          margin-top: 5px;
+          border-top: 1px dotted var(--blades-white-bright);
+        }
+        .pc-summary-gear-loadout-container {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: nowrap;
+          justify-content: stretch;
+          gap: 3px;
+          height: 14px;
+          .pc-summary-gear-loadout {
+            flex-grow: 1;
+            font-family: "Fjalla One";
+            font-size: 10px;
+            line-height: 12px;
+            text-transform: uppercase;
+            white-space: nowrap;
+            overflow: hidden;
+            text-align: left;
+            color: var(--blades-gold-bright);
+          }
+          i {
+            font-size: 10px;
+            line-height: 12px;
+          }
+        }
+
+        .pc-summary-asset {
+          display: flex;
+          flex-direction: row;
+          // position: relative;
+
+          .pc-summary-asset-img {
+            height: 12px;
+            flex-grow: 0;
+            flex-shrink: 0;
+            flex-basis: 12px;
+          }
+
+          .pc-summary-asset-name {
+            flex-grow: 1;
+            font-family: "Fjalla One";
+            font-size: 10px;
+            line-height: 12px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-transform: uppercase;
+            color: var(--blades-white-bright);
+
+            &:hover {overflow: visible}
+          }
+
+
+        }
+
+        .tooltip.pc-summary-asset-tooltip {
+          font-size: 10px;
+          line-height: 10px;
+        }
+      }
+    }
+    section.pc-summary-maluses {
+      grid-area: harm;
+
+      .pc-summary-stress-container {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        height: 14px;
+        overflow: hidden;
+        flex-wrap: nowrap;
+        flex-direction: row;
+
+        .pc-summary-stress-box {
+          display: block;
+          height: 100%;
+          width: 5px;
+          margin: 0px 1px;
+          border: 1px solid var(--blades-red-dark);
+          border-radius: 3px;
+
+          &.stress-box-full {
+            background: var(--blades-red-bright);
+            border-color: var(--blades-red);
+          }
+        }
+      }
+
+      .pc-summary-trauma-container {
+        margin-top: 5px;
+        border-bottom: 1px dotted var(--blades-red);
+        .pc-summary-trauma {
+          color: var(--blades-red-bright);
+          font-weight: bold;
+          font-family: Kirsty;
+          font-size: 12px;
+          text-transform: uppercase;
+          text-align: center;
+          width: 100%;
+          display: block;
+        }
+      }
+
+      .pc-summary-harm-container {
+        margin-top: 5px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: stretch;
+        flex-direction: column;
+
+        .pc-summary-harm {
+          font-size: 10px;
+          font-family: "Fjalla One";
+          overflow: hidden;
+          display: flex;
+          flex-direction: row;
+          flex-wrap: nowrap;
+          justify-content: stretch;
+          flex-grow: 1;
+          padding: 0 5px;
+          line-height: 15px;
+          pointer-events: auto;
+
+          &:hover { overflow: visible }
+
+          > label {
+            flex-grow: 1;
+            white-space: nowrap;
+            padding-left: 4px;
+          }
+          > i { line-height: 15px }
+          &.pc-harm-heavy {
+            color: var(--blades-white-bright);
+            background: var(--blades-red-dark);
+            font-weight: bold;
+          }
+          &.pc-harm-medium {
+            color: var(--blades-red-bright);
+            font-weight: bold;
+          }
+          &.pc-harm-light {
+            color: var(--blades-red-bright);
+          }
+        }
+      }
+    }
+  }
 }
