--- a/scss/tinymce/_tinymce-content.scss
+++ b/scss/tinymce/_tinymce-content.scss
@@ -13,28 +13,47 @@
     display: block;
     margin-block-start: 7px;
     margin-block-end: 7px;
+    text-shadow: 0 0 4px var(--blades-black-dark),0 0 4px var(--blades-black-dark),0 0 4px var(--blades-black-dark),0 0 4px var(--blades-black-dark);
+  }
+
+  .inline-doc-img {
+    display: inline;
+    height: 24px;
+    width: 24px;
+    vertical-align: top;
+    margin: -5px 5px -5px 0;
+  }
+
+  .inline-doc-link {
+    color: var(--blades-black-dark);
+    text-decoration: none;
+    font-family: var(--font-emphasis);
+    text-shadow: none;
+    background: var(--blades-white);
+    border-radius: 6px;
+    padding: 2px 6px;
+    pointer-events: auto;
+    cursor: pointer;
+    box-shadow: 0 0 4px var(--blades-black),0 0 4px var(--blades-black), 0 0 4px var(--blades-black),0 0 4px var(--blades-black);
   }
 
   .tox-two-column-flex {
     display: flex;
-    width: 100%;
+    // width: calc(100%;
     height: auto;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 2px 5px;
     align-content: stretch;
     padding: 0;
+    margin: 0 20px;
 
-    > * {
-      flex-basis: 49%;
-      flex-shrink: 1;
-      flex-grow: 1;
-      max-width: 50%;
-      margin: 0;
+    p {
       line-height: 1rem;
       padding: 3px;
+      margin: 4px 0;
 
-      &::before {
+      &:not(.inline-doc-link-container)::before {
         content: "◊";
         margin-right: 5px;
         font-family: var(--font-emphasis);
@@ -42,6 +61,14 @@
         vertical-align: top;
         color: var(--blades-gold);
       }
+    }
+
+    > *, > p {
+      flex-basis: 49%;
+      flex-shrink: 1;
+      flex-grow: 1;
+      max-width: 50%;
+      margin: 0;
     }
   }
 }
